--- a/src/main/resources/templates/resume/advice-result.html
+++ b/src/main/resources/templates/resume/advice-result.html
@@ -11,16 +11,39 @@
     <title>Improvement & Advice</title>
 </head>
 <body>
+
 <main layout:fragment="main" class="flex justify-center items-center h-auto mt-16">
+
+    <script>
+        function downloadText() {
+            var elements = document.querySelectorAll(".improvementPoint, .advice");
+            var txtData = '';
+            for (var i = 0; i < elements.length; i++) {
+                txtData += elements[i].textContent + '\n';
+            }
+
+            var blob = new Blob([txtData], { type: 'text/plain' });
+            var url = URL.createObjectURL(blob);
+
+            var link = document.createElement('a');
+            link.download = 'advice.txt';
+            link.href = url;
+
+            link.click();
+        }
+    </script>
+
     <div class="w-full max-w-2xl mx-auto">
         <h1 class="text-center mb-6">개선 목록</h1>
         <div th:each="improveResponse : ${improveResponses}">
             <div class="border-t-2 py-6">
-                <h2 class="text-2xl mb-2" th:text="${improveResponse.improvementPoint()}">Question</h2>
-                <p th:text="${improveResponse.advice()}">Best answer</p>
+                <h2 class="text-2xl mb-2 improvementPoint" th:text="${improveResponse.improvementPoint()}">Question</h2>
+                <p class="advice" th:text="${improveResponse.advice()}">Best answer</p>
             </div>
         </div>
+        <button onClick="downloadText()" className="mt-8">텍스트 파일로 저장하기</button>
     </div>
 </main>
+
 </body>
 </html>
