--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -68,7 +68,7 @@
                     카카오로 로그인하기
                 </a>
                 <a class="btn btn-link" href="/oauth2/authorization/github">
-                    깃허브 로그인하기(아직 안됨)
+                    깃허브 로그인하기
                 </a>
                 <a class="btn btn-link" href="/oauth2/authorization/google">
                     구글 로그인하기
