--- a/src/main/resources/templates/resume/advice-result.html
+++ b/src/main/resources/templates/resume/advice-result.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.6/dist/full.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css"/>
 
-    <title>Improvement & Advice</title>
+    <title>개선 목록</title>
 </head>
 <body>
 
@@ -22,7 +22,7 @@
                 txtData += elements[i].textContent + '\n';
             }
 
-            var blob = new Blob([txtData], { type: 'text/plain' });
+            var blob = new Blob([txtData], {type: 'text/plain'});
             var url = URL.createObjectURL(blob);
 
             var link = document.createElement('a');
@@ -34,16 +34,22 @@
     </script>
 
     <div class="w-full max-w-2xl mx-auto">
-        <h1 class="text-center mb-6">개선 목록</h1>
-        <div th:each="improveResponse : ${improveResponses}">
+        <h1 class="text-2xl mb-6">📩 이런 점을 개선하면 더 좋아요</h1>
+
+        <div th:each="improveResponse, iterStat : ${improveResponses}">
+            <div th:if="${iterStat.index % 3 == 0}" class="mt-6">
+                <h2 class="text-xl mb-2" th:text="'요청 ' + (${iterStat.index/3} + 1)">요청 1</h2>
+                <hr class="mb-4"/>
+            </div>
+
             <div class="border-t-2 py-6">
-                <h2 class="text-2xl mb-2 improvementPoint" th:text="${improveResponse.improvementPoint()}">Question</h2>
+                <h3 class="text-2xl mb-2 improvementPoint" th:text="${improveResponse.improvementPoint()}">Question</h3>
                 <p class="advice" th:text="${improveResponse.advice()}">Best answer</p>
             </div>
         </div>
-        <button onClick="downloadText()" className="mt-8">텍스트 파일로 저장하기</button>
+
+        <button type="button" onClick="downloadText()" className="mt-8">텍스트 파일로 저장하기</button>
     </div>
 </main>
-
 </body>
 </html>
