Feat: 폼 삭제 버튼 임시로 추가

--- a/src/main/resources/templates/resume/question-request.html
+++ b/src/main/resources/templates/resume/question-request.html
@@ -48,9 +48,18 @@
             contentTextarea.classList.add("textarea", "textarea-bordered", "h-64", "mb-2");
             contentTextarea.placeholder = "선택한 분야에 맞는 이력서 내용을 작성해주세요.";
 
+            var deleteButton = document.createElement("button");
+            deleteButton.type = "button";
+            deleteButton.textContent = "삭제";
+            deleteButton.classList.add("text-sm", "mb-2");
+            deleteButton.onclick = function () {
+                resumeSectionsDiv.removeChild(sectionDiv);
+            };
+
             sectionDiv.appendChild(resumeTypeSelect);
             sectionDiv.appendChild(document.createElement("br"));
             sectionDiv.appendChild(contentTextarea);
+            sectionDiv.appendChild(deleteButton);
 
             resumeSectionsDiv.appendChild(sectionDiv);
         }
