--- a/src/main/resources/templates/article/createForm.html
+++ b/src/main/resources/templates/article/createForm.html
@@ -3,13 +3,6 @@
     <title>게시글 작성</title>
 
     <style>
-        .delete-button {
-            position: absolute;
-            top: 0px;
-            right: 16px;
-            background-color: #f44336;
-            padding: 2px;
-        }
         .image-upload > input
         {
             display: none;
@@ -21,7 +14,7 @@
     <div class="container mx-auto py-8 w-1/2">
         <h1 class="text-2xl font-bold">게시글 작성</h1>
 
-        <form class="mt-4" th:object="${articleRequestDto}" method="post" onsubmit="ArticleRequestForm__submit(this); return false;" enctype="multipart/form-data">
+        <form class="mt-4" th:object="${articleRequestDto}" method="post" enctype="multipart/form-data">
             <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
             <div class="mb-4">
                 <input type="text" name="title" th:field="*{title}" class="form-input w-full border border-info rounded-md h-10 p-3" placeholder="제목을 입력하세요">
@@ -36,8 +29,11 @@
                     <div class="image-upload">
                         <span th:text="|${i}번 이미지|"></span>
                         <label th:for="|file-input-${i}|">
-                            <div class="upload-icon w-[100px] h-[97px] border border-2 border-solid border-dotted rounded-md">
+                            <div class="upload-icon w-[100px] h-[97px] border border-2 border-solid border-info border-dotted rounded-md relative">
                                 <img class="w-[100px] h-[93px] rounded-md cursor-pointer preview-image" th:id="|preview-image-${i}|" src="https://i.ibb.co/d7wH0dJ/image4.png">
+                                <button type="button" class="!bg-red-500 absolute top-0 right-0 transform translate-x-1/2 -translate-y-1/2 rounded-full w-6 h-6 flex items-center justify-center text-white" style="display: none;" th:id="|cancel-button-${i}|" th:onclick="|cancelFileSelect(${i})|">
+                                    X
+                                </button>
                             </div>
                         </label>
                         <input th:id="|file-input-${i}|" type="file" th:name="|file\_\_${i}|" accept="image/png, image/gif, image/jpeg" th:onchange="|handleFileSelect(event, ${i})|"/>
@@ -61,46 +57,12 @@
             </div>
             <input type="hidden" id="hashTagStr" name="hashTagStr" th:field="*{hashTagStr}" />
 
-<!--            <th:block th:each="i : ${#numbers.sequence(1, 5)}">-->
-<!--                <div>-->
-<!--                    <span th:text="|${i}번 이미지|"></span>-->
-<!--                    <input type="file" th:name="|file\_\_${i}|" accept="image/png, image/gif, image/jpeg">-->
-<!--                </div>-->
-<!--            </th:block>-->
-
-
-
-            <!--            <div class="mb-6">-->
-            <!--                <input type="file" name="file1" class="w-full" onchange="previewImage(event)" accept="image/png, image/gif, image/jpeg">-->
-            <!--                &lt;!&ndash;                <div id="imagePreview" class="mt-2"></div>&ndash;&gt;-->
-            <!--            </div>-->
-            <!--            <div class="mb-6">-->
-            <!--                <input type="file" name="file2" class="w-full" onchange="previewImage(event)" accept="image/png, image/gif, image/jpeg">-->
-            <!--                &lt;!&ndash;                <div id="imagePreview" class="mt-2"></div>&ndash;&gt;-->
-            <!--            </div>-->
-
             <button type="submit" class="register bg-info hover:bg-blue-500 text-white font-bold px-4 py-2 rounded border-info" onclick="submitForm()">저장하기</button>
         </form>
     </div>
 
 
     <script layout:fragment="script" type='text/javascript'>
-        function ArticleRequestForm__submit(form) {
-            if (form.title.value.length === 0) {
-                toastWarning('제목을 입력해야 합니다.');
-                form.title.focus();
-                return;
-            }
-
-            if(form.content.value.length === 0) {
-                toastWarning('내용을 입력해야 합니다.');
-                form.content.focus();
-                return;
-            }
-
-            form.submit();
-        }
-
         // 해시태그 추가를 위한 함수
         function addHashTag(event) {
             event.preventDefault();
@@ -159,13 +121,24 @@
         function handleFileSelect(event, index) {
             const file = event.target.files[0];
             const reader = new FileReader();
+            const previewImage = document.getElementById(`preview-image-${index}`);
+            const cancelButton = document.getElementById(`cancel-button-${index}`);
 
             reader.onload = function (e) {
-                const previewImage = document.getElementById(`preview-image-${index}`);
                 previewImage.src = e.target.result;
+                cancelButton.style.display = "block";
             };
 
             reader.readAsDataURL(file);
+        }
+
+        function cancelFileSelect(index) {
+            const inputElement = document.getElementById(`file-input-${index}`);
+            const cancelButton = document.getElementById(`cancel-button-${index}`);
+            inputElement.value = ""; // 파일 선택 취소
+            const previewImage = document.getElementById(`preview-image-${index}`);
+            previewImage.src = "https://i.ibb.co/d7wH0dJ/image4.png"; // 기본 이미지로 되돌리기
+            cancelButton.style.display = "none";
         }
     </script>
 </main>
