--- a/src/main/resources/templates/article/detailArticle.html
+++ b/src/main/resources/templates/article/detailArticle.html
@@ -9,7 +9,7 @@
         <a href="/article/list" class="bg-white text-info px-1 py-1 mb-3 rounded-md flex-start hover:bg-gray-200">&lt; 전체 게시글</a>
         <h1 class="text-2xl font-bold flex-grow pl-3 mt-2" th:text="${article.title}"></h1>
         <div class="flex justify-between mt-2 mb-1">
-            <p class="text-xs mt-2 mr-2 w-80 ml-3" th:text="${article.member.username}"></p>
+            <p class="text-xs mt-2 mr-2 w-80 ml-3" th:text="${article.member.nickname}"></p>
             <p class="flex-grow text-xs mt-2" th:text="${#temporals.format(article.createdDate, 'yyyy-MM-dd HH:mm')}"></p>
             <a th:href="@{|/article/update/${article.id}|}" th:if="${@rq.login  and @rq.member.id == article.member.id}" class="text-xs text-black mt-2 underline text-gray-400">수정</a>
             <a href="javascript:void(0);" th:if="${@rq.login and @rq.member.id == article.member.id}" th:data-uri="@{|/article/delete/${article.id}|}" class="delete text-xs text-black mt-2 mx-2 underline text-gray-400">삭제</a>
@@ -20,7 +20,9 @@
         <hr class="border-info mb-4">
 
         <div class="min-h-[200px]">
-            <pre class="text-sm pl-3 min-h-[60px]" style="word-break: break-word; font-family: GmarketSansMedium;"  th:text="${article.content}"></pre>
+            <div style="word-wrap: break-word;">
+                <div class="text-sm pl-3 min-h-[60px]" style="word-break: break-word; white-space: pre-wrap;"  th:text="${article.content}"></div>
+            </div>
             <div class="flex flex-wrap ml-3">
                 <tr th:each="i : ${#numbers.sequence(1, 5)}" th:with="file=${article.extra.fileMap.get('file\_\_' + i)}" class="flex">
                     <th:block th:if="${file != null}">
@@ -52,7 +54,7 @@
         <form th:action="@{|/comment/create/${article.id}|}" th:object="${commentRequestDto}" method="post" class="flex mb-4 justify-between items-start" onsubmit="CommentRequestForm__submit(this); return false;">
             <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
             <div class="flex">
-                <div th:if="${@rq.login}" th:text="${@rq.member.username}" class="text-xs w-24 text-center" ></div>
+                <div th:if="${@rq.login}" th:text="${@rq.member.nickname}" class="text-xs w-32 text-center truncate overflow-ellipsis" ></div>
             </div>
             <textarea name="content" th:field="*{content}" class="form-textarea border border-info rounded-md px-4 py-2 flex-grow focus:outline-none min-h-[100px]" placeholder="댓글을 작성하세요"></textarea>
             <button type="submit" class="register bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500">등록</button>
@@ -66,7 +68,7 @@
                     <!--댓글 내용-->
                     <div class="flex justify-between items-center">
                         <div class="flex items-end mb-3">
-                            <div th:text="${comment.member.username}" class="text-sm pl-3 mr-2">글쓴이</div>
+                            <div th:text="${comment.member.nickname}" class="text-sm pl-3 mr-2">글쓴이</div>
                             <div class="text-xs" th:text="${#temporals.format(comment.createdDate, '(yyyy-MM-dd HH:mm)')}"></div>
                         </div>
                         <div class="flex items-center justify-center">
@@ -110,7 +112,7 @@
                                 <!--답글 내용-->
                                 <div class="flex justify-between items-center">
                                     <div class="flex items-end mb-3 mt-3">
-                                        <div th:text="${subComment.member.username}" class="text-sm mr-2"></div>
+                                        <div th:text="${subComment.member.nickname}" class="text-sm mr-2"></div>
                                         <div class="text-xs" th:text="${#temporals.format(subComment.createdDate, '(yyyy-MM-dd HH:mm)')}"></div>
                                     </div>
                                     <div class="flex items-center justify-center">
