View: 게시글, 로그인, 회원가입 색 변경

--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -21,10 +21,10 @@
                             }
                         </script>
                     </div>
-                    <a th:href="@{/article/create}" class="ml-2 my-3 bg-info text-white px-4 py-2 rounded-lg text-sm hover:bg-blue-500">게시글 작성</a>
+                    <a th:href="@{/article/create}" class="ml-2 my-3 bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black">게시글 작성</a>
                 </div>
                 <ul class="container">
-                    <li class="bg-info text-white p-3 flex justify-between border-b h-11">
+                    <li class="bg-neutral text-white p-3 flex justify-between border-b h-11">
                         <div class="text-sm flex-grow ">게시글 제목</div>
                         <div class="text-sm w-16 text-center">글쓴이</div>
                         <div class="text-sm  w-16 text-center">추천수</div>
@@ -86,7 +86,7 @@
                             $('input[name="query"]:last').val(params.query[0]);
                         }
                     </script>
-                    <button type="submit" class="text-blue-500 px-2 py-2">🔍</button>
+                    <button type="submit" class="text-black px-2 py-2">🔍</button>
                 </div>
             </div>
         </form>
