--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -3,10 +3,10 @@
 <body>
 
 <header layout:fragment="header" class="sticky top-0 z-50">
-  <div class="navbar bg-white shadow border-b-2 border-info">
+  <div class="navbar bg-white shadow border-b-2 border-neutral">
     <div class="flex-1">
       <a class="btn btn-ghost normal-case text-xl" href="/">
-        <img class="h-12 w-auto" src="https://i.ibb.co/QJr89md/image2.png" alt="로고">
+        <img class="h-12 w-auto" src="https://i.ibb.co/pxYNScW/image5.png" alt="로고">
       </a>
       <a href="/resumes/advices" class="btn btn-ghost normal-case text-xl">이력서 검토</a>
       <a href="/resumes/questions" class="btn btn-ghost normal-case text-xl">면접 예상 질문</a>
