--- a/src/main/resources/templates/article/detailArticle.html
+++ b/src/main/resources/templates/article/detailArticle.html
@@ -6,7 +6,7 @@
 <main layout:fragment="main" class="container my-3 mx-auto">
 
     <div class="container mx-auto py-8 w-1/2">
-        <a href="/article/list" class="bg-white text-info px-1 py-1 mb-3 rounded-md flex-start hover:bg-gray-200">&lt; 전체 게시글</a>
+        <a href="/article/list" class="bg-white text-neutral px-1 py-1 mb-3 rounded-md flex-start hover:bg-gray-200">&lt; 전체 게시글</a>
         <h1 class="text-2xl font-bold flex-grow pl-3 mt-2" th:text="${article.title}"></h1>
         <div class="flex justify-between mt-2 mb-1">
             <p class="text-xs mt-2 mr-2 w-80 ml-3" th:text="${article.member.nickname}"></p>
@@ -17,7 +17,7 @@
             <p class="text-xs mt-2 mr-2" th:text="|추천:${#lists.size(article.likesList)}|"></p>
             <p class="text-xs mt-2" th:text="|댓글:${article.commentsCount}|"></p>
         </div>
-        <hr class="border-info mb-4">
+        <hr class="border-neutral mb-4">
 
         <div class="min-h-[200px]">
             <div style="word-wrap: break-word;">
@@ -35,7 +35,7 @@
         </div>
         <div class="flex flex-wrap">
             <th:block th:each="hashTag : ${article.hashTagList}">
-                <a th:href="@{${hashTag.keyword.listUrl}}" class="bg-blue-200 px-2 py-1 rounded-full m-2">
+                <a th:href="@{${hashTag.keyword.listUrl}}" class="bg-gray-300 px-2 py-1 rounded-full m-2">
                     #[[${hashTag.keyword.content}]]
                 </a>
             </th:block>
@@ -43,25 +43,25 @@
         <div class="flex justify-center">
             <form th:action="@{|/likes/like/article/${article.id}|}" method="post">
                 <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                <button type="submit" class="bg-info border-gray-300 text-white px-4 py-1 mt-4 rounded-md mr-2 hover:bg-blue-500">
+                <button type="submit" class="bg-neutral border-gray-300 text-white px-4 py-1 mt-4 rounded-md mr-2 hover:bg-black">
                     <i class="fa-solid fa-heart text-xl" th:if="${article.isMemberLikesArticle(@rq.member)}"></i>
                     <i class="fa-regular fa-heart text-xl" th:if="${!article.isMemberLikesArticle(@rq.member)}"></i><p class="text-xs mt-1">좋아요</p></i>
                 </button>
             </form>
         </div>
-        <hr class="border-info mt-1 mb-4">
+        <hr class="border-neutral mt-1 mb-4">
         <!--댓글 등록-->
         <form th:action="@{|/comment/create/${article.id}|}" th:object="${commentRequestDto}" method="post" class="flex mb-4 justify-between items-start" onsubmit="CommentRequestForm__submit(this); return false;">
             <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
             <div class="flex">
                 <div th:if="${@rq.login}" th:text="${@rq.member.nickname}" class="text-xs w-32 text-center truncate overflow-ellipsis" ></div>
             </div>
-            <textarea name="content" th:field="*{content}" class="form-textarea border border-info rounded-md px-4 py-2 flex-grow focus:outline-none min-h-[100px]" placeholder="댓글을 작성하세요"></textarea>
-            <button type="submit" class="register bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500">등록</button>
+            <textarea name="content" th:field="*{content}" class="form-textarea border border-neutral rounded-md px-4 py-2 flex-grow focus:outline-none min-h-[100px]" placeholder="댓글을 작성하세요"></textarea>
+            <button type="submit" class="register bg-neutral text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-black">등록</button>
         </form>
         <!--댓글 등록 완료-->
 
-        <hr class="border-info mt-4">
+        <hr class="border-neutral mt-4">
         <ul class="container" th:each="comment : ${article.commentList}">
             <div th:if="${!comment.deleted}">
                 <li class="text-black p-1 justify-between">
@@ -76,7 +76,7 @@
                             <a href="javascript:void(0);" th:if="${@rq.login  and @rq.member.id == comment.member.id}" th:data-uri="@{|/comment/delete/${comment.id}|}" class="delete text-xs text-black mx-2 underline pb-3 text-gray-400">삭제</a>
                             <form th:action="@{|/likes/like/comment/${comment.id}|}" method="post">
                                 <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                                <button type="submit" class="flex bg-white border-gray-300 text-info px-3 py-1 rounded-md mr-2 hover:bg-gray-200">
+                                <button type="submit" class="flex bg-white border-gray-300 text-neutral px-3 py-1 rounded-md mr-2 hover:bg-gray-200">
                                     <i class="fa-regular fa-heart text-xs" th:if="${!comment.isMemberLikesComment(@rq.member)}"></i>
                                     <i class="fa-solid fa-heart text-xs" th:if="${comment.isMemberLikesComment(@rq.member)}"></i>
                                     <p th:text="${#lists.size(comment.likesList)}" class="ml-1 text-xs"></p>
@@ -90,9 +90,9 @@
                     <!--댓글 수정-->
                     <form th:action="@{|/comment/update/${comment.id}|}" th:object="${commentRequestDto}" method="post" class="mb-4 justify-between items-start" onsubmit="CommentRequestForm__submit(this); return false;">
                         <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                        <textarea th:id="|textarea-${comment.id}|" name="content" th:field="*{content}" class="hidden modify-textarea form-textarea w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="댓글 내용"></textarea>
+                        <textarea th:id="|textarea-${comment.id}|" name="content" th:field="*{content}" class="hidden modify-textarea form-textarea w-full p-3 resize-none overflow-y-auto border border-neutral rounded-md mb-2 text-sm" placeholder="댓글 내용"></textarea>
                         <div class="flex">
-                            <input th:id="|button-${comment.id}|" type="submit" value="수정완료" class="hidden modify-save-button bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500 ml-auto" onclick="saveComment()" th:attr="data-id=${comment.id}">
+                            <input th:id="|button-${comment.id}|" type="submit" value="수정완료" class="hidden modify-save-button bg-neutral text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-black ml-auto" onclick="saveComment()" th:attr="data-id=${comment.id}">
                         </div>
                     </form>
                     <div class="flex justify-end">
@@ -106,7 +106,7 @@
 
                         <div th:if="${!subComment.deleted}" class="flex pl-3">
                             <div class="mx-2 flex flex-col">
-                                <div class="mt-3 fa-solid fa-arrow-turn-up fa-rotate-90 text-xl text-info"></div>
+                                <div class="mt-3 fa-solid fa-arrow-turn-up fa-rotate-90 text-xl text-neutral"></div>
                             </div>
                             <li class="text-black p-1 justify-between flex-grow border-t border-gray-300 bg-gray-100">
                                 <!--답글 내용-->
@@ -120,7 +120,7 @@
                                         <a href="javascript:void(0);" th:if="${@rq.login and @rq.member.id == subComment.member.id}" th:data-uri="@{|/subComment/delete/${subComment.id}|}" class="delete text-xs text-black mx-2 underline pb-3  text-gray-400">삭제</a>
                                         <form th:action="@{|/likes/like/subComment/${subComment.id}|}" method="post">
                                             <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                                            <button type="submit" class="flex bg-white border-gray-300 text-info px-3 py-1 rounded-md mr-2 hover:bg-gray-200">
+                                            <button type="submit" class="flex bg-white border-gray-300 text-neutral px-3 py-1 rounded-md mr-2 hover:bg-gray-200">
                                                 <i class="fa-regular fa-heart text-xs" th:if="${!subComment.isMemberLikesSubComment(@rq.member)}"></i>
                                                 <i class="fa-solid fa-heart text-xs" th:if="${subComment.isMemberLikesSubComment(@rq.member)}"></i>
                                                 <p th:text="${#lists.size(subComment.likesList)}" class="ml-1 text-xs"></p>
@@ -135,9 +135,9 @@
                                 <div th:id="|update-subComment-${subComment.id}|" class="hidden">
                                     <form th:action="@{|/subComment/update/${subComment.id}|}" th:object="${subCommentRequestDto}" method="post" class="mb-4 justify-between items-start" onsubmit="SubCommentRequestForm__submit(this); return false;">
                                         <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                                        <textarea name="content" th:id="|textarea-subComment-${subComment.id}|" th:field="*{content}" class="form-textarea2 modify-textarea w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="답글 내용"></textarea>
+                                        <textarea name="content" th:id="|textarea-subComment-${subComment.id}|" th:field="*{content}" class="form-textarea2 modify-textarea w-full p-3 resize-none overflow-y-auto border border-neutral rounded-md mb-2 text-sm" placeholder="답글 내용"></textarea>
                                         <div class="flex">
-                                            <button type="submit" class="register2 modify-save-button bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500 ml-auto" onclick="saveSubComment()" th:attr="data-id=${subComment.id}">수정완료</button>
+                                            <button type="submit" class="register2 modify-save-button bg-neutral text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-black ml-auto" onclick="saveSubComment()" th:attr="data-id=${subComment.id}">수정완료</button>
                                         </div>
                                     </form>
                                 </div>
@@ -152,13 +152,13 @@
                         <hr class=" border-gray-300 mt-4 mb-4">
                         <div class="flex justify-start">
                             <div class="mx-2">
-                                <div class="fa-solid fa-arrow-turn-up fa-rotate-90 text-xl text-info"></div>
+                                <div class="fa-solid fa-arrow-turn-up fa-rotate-90 text-xl text-neutral"></div>
                             </div>
                             <form th:action="@{|/subComment/create/${comment.id}|}" th:object="${subCommentRequestDto}" method="post" class="mt-1 mb-4 justify-between items-start flex-grow" onsubmit="SubCommentRequestForm__submit(this); return false;">
                                 <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                                <textarea name="content" th:field="*{content}" class="form-textarea2 w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="답변에 댓글을 작성하세요"></textarea>
+                                <textarea name="content" th:field="*{content}" class="form-textarea2 w-full p-3 resize-none overflow-y-auto border border-neutral rounded-md mb-2 text-sm" placeholder="답변에 댓글을 작성하세요"></textarea>
                                 <div class="flex">
-                                    <button type="submit" class="register2 bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500 ml-auto" onclick="createSubComment()" th:attr="data-id=${comment.id}">등록</button>
+                                    <button type="submit" class="register2 bg-neutral text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-black ml-auto" onclick="createSubComment()" th:attr="data-id=${comment.id}">등록</button>
                                 </div>
                             </form>
                         </div>
