--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -7,7 +7,7 @@
         <form th:action="@{/article/list}" method="get" id="toListForm">
             <div class="container mx-auto p-8 w-2/3">
                 <div class="flex items-center justify-between h-16">
-                    <a href="/article/list" class="text-2xl font-bold">전체 게시글</a>
+                    <a href="/article/list" class="text-2xl font-bold">📌전체 게시글</a>
                     <div class="form-control flex-grow">
                         <select name="sortCode" class="ml-2 select w-40 select-ghost select-sm"
                                 onchange="$(this).closest('form').submit();">
